Overflow bug with sets

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@ body, html{
   height: 100%;
 }
 
+.holder{
+  overflow-y: scroll;
+}
+
 a {
   color: #00B7FF;
 }
